# stroke-risk-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01-eda.ipynb  02-modelling.ipynb
src/stroke_risk/: config.py
src/stroke_risk/app/: gradio.py  main.py  schemas.py
src/stroke_risk/features/: build_features.py
src/stroke_risk/ingest/: load_data.py
src/stroke_risk/models/: evaluate.py  interpret.py  model.py  promote.py  train.py  tune.py
src/stroke_risk/serving/: inference.py
src/stroke_risk/utils/: validate_data.py
src/stroke_risk_api/: config.py
src/stroke_risk_api/data/: loaders.py
tests/: test_app.py  test_build_features.py  test_inference.py  test_load_data.py  test_loaders.py  test_model.py  test_promote.py  test_schemas.py  test_validate_data.py
