[project]
name = "stroke-risk-api"
version = "0.1.0"
description = "Stroke Risk Prediction API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.50.0",
]


[project.optional-dependencies]
tune = ["optuna>=3.6"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stroke_risk_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
