[project]
name = "stroke-risk"
version = "0.1.0"
description = "Stroke Risk Prediction API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "great-expectations>=1.18.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "nbstripout>=0.9.1",
    "numpy>=2.0,<2.5",
    "optuna>=4.9.0",
    "pandas>=2.2,<3",
    "pandas-stubs>=2.2,<3",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "uvicorn[standard]>=0.50.0",
    "xgboost>=3.3.0",
]


[project.optional-dependencies]
tune = ["optuna>=3.6"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stroke_risk"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]
